--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-dark bg-primary">
       <div class="container">
         <a class="navbar-brand mx-auto" href="/index.html"
-          >Sign Language Quiz Game</a
+          >เรียนภาษามือเบื้องต้น</a
         >
       </div>
     </nav>
@@ -30,76 +30,11 @@
           allowfullscreen></iframe>
       </div>
     </div>
-
-    <div class="container quiz-container mt-5">
-      <h2 class="text-center">Test Your Knowledge!</h2>
-      <form id="quizForm" class="mt-4">
-        <!-- Question 1 -->
-        <div class="mb-4 question">
-          <h5>1. What is the sign for 'Hello' in American Sign Language?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q1"
-              value="a"
-              id="q1a" />
-            <label class="form-check-label" for="q1a"
-              >A) Raise hand to forehead</label
-            >
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q1"
-              value="b"
-              id="q1b" />
-            <label class="form-check-label" for="q1b">B) Wave both hands</label>
-          </div>
-        </div>
-
-        <!-- Add more questions here in the same format -->
-        <!-- Question 2 -->
-        <div class="mb-4 question">
-          <h5>2. What is the sign for 'Thank you'?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q2"
-              value="a"
-              id="q2a" />
-            <label class="form-check-label" for="q2a"
-              >A) Hand from chin outward</label
-            >
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q2"
-              value="b"
-              id="q2b" />
-            <label class="form-check-label" for="q2b">B) Clap both hands</label>
-          </div>
-        </div>
-
-        <!-- Add more questions here in the same format -->
-        <!-- Repeat for a total of 10 questions -->
-
-        <!-- Submit Button -->
-        <div class="text-center">
-          <button
-            type="button"
-            class="btn btn-primary"
-            onclick="calculateScore()">
-            Submit
-          </button>
-        </div>
-      </form>
-
-      <div id="result" class="mt-4 text-center"></div>
+    <div class="d-flex justify-content-center mt-5">
+      <button type="button"  class="btn btn-success" >
+        <a href="/game.html">ทดสอบความรู้ที่เรียน</a>
+      </button>
+      
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
