--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
           >
         </div>
       </nav>
-    <div class="container quiz-container mt-5">
+    <div class="container quiz-container">
         <h2 class="text-center">ทดสอบความรู้ที่เรียน</h2>
         <form id="quizForm" class="mt-4">
           <!-- Question 1 -->
@@ -98,5 +98,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
+        <script src="/app.js"></script>
 </body>
 </html>
