--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="d-flex justify-content-center mt-5">
       <button type="button"  class="btn btn-success" >
-        <a href="/game.html">ทดสอบความรู้ที่เรียน</a>
+        <a class="text-light" href="/game.html">ทดสอบความรู้ที่เรียน</a>
       </button>
       
     </div>
