--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-dark bg-primary sticky-top">
       <div class="container">
         <a class="navbar-brand mx-auto" href="/index.html"
           >เรียนภาษามือเบื้องต้น</a
@@ -31,11 +31,21 @@
       </div>
     </div>
     <div class="d-flex justify-content-center mt-5">
-      <button type="button"  class="btn btn-success" >
+      <button type="button" class="btn btn-success">
         <a class="text-light" href="/game.html">ทดสอบความรู้ที่เรียน</a>
       </button>
-      
     </div>
+    <p class="container mt-5 p-4">
+      ภาษามือ (อังกฤษ: sign language) เป็นอวัจนภาษาอย่างหนึ่ง ที่ประกอบด้วย
+      การสื่อสารด้วยมือ, การสื่อสารด้วยร่างกาย
+      และการใช้ริมฝีปากในการสื่อความหมายแทนการใช้เสียงพูด
+      การสื่อสารจะใช้ลักษณะของมือที่ทำเป็นสัญลักษณ์ การเคลื่อนไหวมือ
+      แขนและร่างกาย
+      และการแสดงความรู้สึกทางใบหน้าเพื่อช่วยในการสื่อสารความคิดของผู้สื่อ
+      ภาษาสัญลักษณ์ส่วนใหญ่มักใช้ในกลุ่มผู้พิการทางหู
+      ซึ่งรวมทั้งผู้พิการทางหูเอง ผู้ตีความหมาย (interpreter) ผู้ร่วมงาน เพื่อน
+      และครอบครัวของผู้พิการทางหูซึ่งอาจจะพอได้ยินบ้างหรือไม่ได้ยินเลย
+    </p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
