--- a/game.html
+++ b/game.html
@@ -1,104 +1,361 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html lang="th">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>แบบทดสอบ</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <nav class="navbar navbar-dark bg-primary">
-        <div class="container">
-          <a class="navbar-brand mx-auto" href="/index.html"
-            >เรียนภาษามือเบื้องต้น</a
-          >
-        </div>
-      </nav>
-    <div class="container quiz-container">
-        <h2 class="text-center">ทดสอบความรู้ที่เรียน</h2>
-        <form id="quizForm" class="mt-4">
-          <!-- Question 1 -->
-          <div class="mb-4 question">
-            <h5>1. What is the sign for 'Hello' in American Sign Language?</h5>
-            <div class="card" style="width: 18rem;">
-              <img src="/1.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="q1"
-                    value="a"
-                    id="q1a" />
-                  <label class="form-check-label" for="q1a"
-                    >A) Raise hand to forehead</label
-                  >
-                </div>
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="q1"
-                    value="b"
-                    id="q1b" />
-                  <label class="form-check-label" for="q1b">B) Wave both hands</label>
-                </div>
-              </div>
-            </div>
-            
-  
-          <!-- Add more questions here in the same format -->
-          <!-- Question 2 -->
-          <div class="mb-4 question">
-            <h5>2. What is the sign for 'Thank you'?</h5>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="q2"
-                value="a"
-                id="q2a" />
-              <label class="form-check-label" for="q2a"
-                >A) Hand from chin outward</label
-              >
-            </div>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="q2"
-                value="b"
-                id="q2b" />
-              <label class="form-check-label" for="q2b">B) Clap both hands</label>
-            </div>
-          </div>
-  
-          <!-- Add more questions here in the same format -->
-          <!-- Repeat for a total of 10 questions -->
-  
-          <!-- Submit Button -->
-          <div class="text-center">
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="calculateScore()">
-              Submit
-            </button>
-          </div>
-        </form>
-  
-        <div id="result" class="mt-4 text-center"></div>
+  </head>
+  <body>
+    <nav class="navbar navbar-dark bg-primary sticky-top">
+      <div class="container">
+        <a class="navbar-brand mx-auto" href="/index.html"
+          >เรียนภาษามือเบื้องต้น</a
+        >
       </div>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    </nav>
+    <div class="container mt-5">
+      <h2>แบบทดสอบ</h2>
+      <form id="quiz-form">
+        <!-- คำถามที่ 1 -->
+        <div class="mb-4 question">
+          <h5>1. คำถามที่ 1?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q1"
+              value="a"
+              id="q1a" />
+            <label class="form-check-label" for="q1a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q1"
+              value="b"
+              id="q1b" />
+            <label class="form-check-label" for="q1b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q1"
+              value="c"
+              id="q1c" />
+            <label class="form-check-label" for="q1c">C) คำตอบ C</label>
+          </div>
+        </div>
 
-        <script src="/app.js"></script>
-</body>
+        <!-- คำถามที่ 2 -->
+        <div class="mb-4 question">
+          <h5>2. คำถามที่ 2?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q2"
+              value="a"
+              id="q2a" />
+            <label class="form-check-label" for="q2a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q2"
+              value="b"
+              id="q2b" />
+            <label class="form-check-label" for="q2b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q2"
+              value="c"
+              id="q2c" />
+            <label class="form-check-label" for="q2c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 3 -->
+        <div class="mb-4 question">
+          <h5>3. คำถามที่ 3?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q3"
+              value="a"
+              id="q3a" />
+            <label class="form-check-label" for="q3a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q3"
+              value="b"
+              id="q3b" />
+            <label class="form-check-label" for="q3b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q3"
+              value="c"
+              id="q3c" />
+            <label class="form-check-label" for="q3c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 4 -->
+        <div class="mb-4 question">
+          <h5>4. คำถามที่ 4?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q4"
+              value="a"
+              id="q4a" />
+            <label class="form-check-label" for="q4a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q4"
+              value="b"
+              id="q4b" />
+            <label class="form-check-label" for="q4b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q4"
+              value="c"
+              id="q4c" />
+            <label class="form-check-label" for="q4c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 5 -->
+        <div class="mb-4 question">
+          <h5>5. คำถามที่ 5?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q5"
+              value="a"
+              id="q5a" />
+            <label class="form-check-label" for="q5a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q5"
+              value="b"
+              id="q5b" />
+            <label class="form-check-label" for="q5b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q5"
+              value="c"
+              id="q5c" />
+            <label class="form-check-label" for="q5c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 6 -->
+        <div class="mb-4 question">
+          <h5>6. คำถามที่ 6?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q6"
+              value="a"
+              id="q6a" />
+            <label class="form-check-label" for="q6a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q6"
+              value="b"
+              id="q6b" />
+            <label class="form-check-label" for="q6b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q6"
+              value="c"
+              id="q6c" />
+            <label class="form-check-label" for="q6c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 7 -->
+        <div class="mb-4 question">
+          <h5>7. คำถามที่ 7?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q7"
+              value="a"
+              id="q7a" />
+            <label class="form-check-label" for="q7a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q7"
+              value="b"
+              id="q7b" />
+            <label class="form-check-label" for="q7b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q7"
+              value="c"
+              id="q7c" />
+            <label class="form-check-label" for="q7c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 8 -->
+        <div class="mb-4 question">
+          <h5>8. คำถามที่ 8?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q8"
+              value="a"
+              id="q8a" />
+            <label class="form-check-label" for="q8a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q8"
+              value="b"
+              id="q8b" />
+            <label class="form-check-label" for="q8b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q8"
+              value="c"
+              id="q8c" />
+            <label class="form-check-label" for="q8c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 9 -->
+        <div class="mb-4 question">
+          <h5>9. คำถามที่ 9?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q9"
+              value="a"
+              id="q9a" />
+            <label class="form-check-label" for="q9a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q9"
+              value="b"
+              id="q9b" />
+            <label class="form-check-label" for="q9b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q9"
+              value="c"
+              id="q9c" />
+            <label class="form-check-label" for="q9c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <!-- คำถามที่ 10 -->
+        <div class="mb-4 question">
+          <h5>10. คำถามที่ 10?</h5>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q10"
+              value="a"
+              id="q10a" />
+            <label class="form-check-label" for="q10a">A) คำตอบ A</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q10"
+              value="b"
+              id="q10b" />
+            <label class="form-check-label" for="q10b">B) คำตอบ B</label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="q10"
+              value="c"
+              id="q10c" />
+            <label class="form-check-label" for="q10c">C) คำตอบ C</label>
+          </div>
+        </div>
+
+        <button
+          type="button"
+          class="btn btn-primary"
+          onclick="calculateScore()">
+          ส่งคำตอบ
+        </button>
+      </form>
+      <div id="result" class="mt-4"></div>
+    </div>
+    
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+      <script src="app.js"></script>
+  </body>
 </html>
