--- a/game.html
+++ b/game.html
@@ -19,12 +19,16 @@
         >
       </div>
     </nav>
-    <div class="container mt-5">
-      <h2>แบบทดสอบ</h2>
+    <div class="container mt-4">
+      <h2 class="text-center mb-2">แบบทดสอบ</h2>
       <form id="quiz-form">
         <!-- คำถามที่ 1 -->
         <div class="mb-4 question">
-          <h5>1. คำถามที่ 1?</h5>
+          <h5>1. สัญลักษณ์สำหรับ 'สวัสดี' ในภาษามืออเมริกันคืออะไร?</h5>
+          <img
+            src="path_to_image_1.jpg"
+            alt="Question 1 Image"
+            class="img-fluid mb-2" />
           <div class="form-check">
             <input
               class="form-check-input"
@@ -32,7 +36,7 @@
               name="q1"
               value="a"
               id="q1a" />
-            <label class="form-check-label" for="q1a">A) คำตอบ A</label>
+            <label class="form-check-label" for="q1a">A) ยกมือแตะหน้าผาก</label>
           </div>
           <div class="form-check">
             <input
@@ -41,22 +45,18 @@
               name="q1"
               value="b"
               id="q1b" />
-            <label class="form-check-label" for="q1b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q1"
-              value="c"
-              id="q1c" />
-            <label class="form-check-label" for="q1c">C) คำตอบ C</label>
+            <label class="form-check-label" for="q1b"
+              >B) โบกมือทั้งสองข้าง</label
+            >
           </div>
         </div>
 
-        <!-- คำถามที่ 2 -->
         <div class="mb-4 question">
-          <h5>2. คำถามที่ 2?</h5>
+          <h5>2. สัญลักษณ์สำหรับ 'ขอบคุณ' มีลักษณะอย่างไร?</h5>
+          <img
+            src="path_to_image_2.jpg"
+            alt="Question 2 Image"
+            class="img-fluid mb-2" />
           <div class="form-check">
             <input
               class="form-check-input"
@@ -64,7 +64,9 @@
               name="q2"
               value="a"
               id="q2a" />
-            <label class="form-check-label" for="q2a">A) คำตอบ A</label>
+            <label class="form-check-label" for="q2a"
+              >A) แตะคางแล้วเหยียดมือไปข้างหน้า</label
+            >
           </div>
           <div class="form-check">
             <input
@@ -73,22 +75,18 @@
               name="q2"
               value="b"
               id="q2b" />
-            <label class="form-check-label" for="q2b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q2"
-              value="c"
-              id="q2c" />
-            <label class="form-check-label" for="q2c">C) คำตอบ C</label>
+            <label class="form-check-label" for="q2b"
+              >B) ประสานมือทั้งสองข้าง</label
+            >
           </div>
         </div>
 
-        <!-- คำถามที่ 3 -->
         <div class="mb-4 question">
-          <h5>3. คำถามที่ 3?</h5>
+          <h5>3. สัญลักษณ์สำหรับ 'ใช่' ในภาษามืออเมริกันคืออะไร?</h5>
+          <img
+            src="path_to_image_3.jpg"
+            alt="Question 3 Image"
+            class="img-fluid mb-2" />
           <div class="form-check">
             <input
               class="form-check-input"
@@ -96,7 +94,9 @@
               name="q3"
               value="a"
               id="q3a" />
-            <label class="form-check-label" for="q3a">A) คำตอบ A</label>
+            <label class="form-check-label" for="q3a"
+              >A) ขยับกำปั้นขึ้นลง</label
+            >
           </div>
           <div class="form-check">
             <input
@@ -105,22 +105,16 @@
               name="q3"
               value="b"
               id="q3b" />
-            <label class="form-check-label" for="q3b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q3"
-              value="c"
-              id="q3c" />
-            <label class="form-check-label" for="q3c">C) คำตอบ C</label>
+            <label class="form-check-label" for="q3b">B) โบกมือ</label>
           </div>
         </div>
 
-        <!-- คำถามที่ 4 -->
         <div class="mb-4 question">
-          <h5>4. คำถามที่ 4?</h5>
+          <h5>4. สัญลักษณ์สำหรับ 'ไม่' คืออะไร?</h5>
+          <img
+            src="path_to_image_4.jpg"
+            alt="Question 4 Image"
+            class="img-fluid mb-2" />
           <div class="form-check">
             <input
               class="form-check-input"
@@ -128,7 +122,7 @@
               name="q4"
               value="a"
               id="q4a" />
-            <label class="form-check-label" for="q4a">A) คำตอบ A</label>
+            <label class="form-check-label" for="q4a">A) ส่ายหัว</label>
           </div>
           <div class="form-check">
             <input
@@ -137,22 +131,18 @@
               name="q4"
               value="b"
               id="q4b" />
-            <label class="form-check-label" for="q4b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q4"
-              value="c"
-              id="q4c" />
-            <label class="form-check-label" for="q4c">C) คำตอบ C</label>
+            <label class="form-check-label" for="q4b"
+              >B) เอานิ้วบีบเข้าด้วยกัน</label
+            >
           </div>
         </div>
 
-        <!-- คำถามที่ 5 -->
         <div class="mb-4 question">
-          <h5>5. คำถามที่ 5?</h5>
+          <h5>5. สัญลักษณ์สำหรับ 'ฉันรักคุณ' คืออะไร?</h5>
+          <img
+            src="path_to_image_5.jpg"
+            alt="Question 5 Image"
+            class="img-fluid mb-2" />
           <div class="form-check">
             <input
               class="form-check-input"
@@ -160,7 +150,7 @@
               name="q5"
               value="a"
               id="q5a" />
-            <label class="form-check-label" for="q5a">A) คำตอบ A</label>
+            <label class="form-check-label" for="q5a">A) กอดอก</label>
           </div>
           <div class="form-check">
             <input
@@ -169,193 +159,29 @@
               name="q5"
               value="b"
               id="q5b" />
-            <label class="form-check-label" for="q5b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q5"
-              value="c"
-              id="q5c" />
-            <label class="form-check-label" for="q5c">C) คำตอบ C</label>
+            <label class="form-check-label" for="q5b"
+              >B) ยกนิ้วโป้ง นิ้วชี้ และนิ้วก้อย</label
+            >
           </div>
         </div>
 
-        <!-- คำถามที่ 6 -->
-        <div class="mb-4 question">
-          <h5>6. คำถามที่ 6?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q6"
-              value="a"
-              id="q6a" />
-            <label class="form-check-label" for="q6a">A) คำตอบ A</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q6"
-              value="b"
-              id="q6b" />
-            <label class="form-check-label" for="q6b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q6"
-              value="c"
-              id="q6c" />
-            <label class="form-check-label" for="q6c">C) คำตอบ C</label>
-          </div>
-        </div>
-
-        <!-- คำถามที่ 7 -->
-        <div class="mb-4 question">
-          <h5>7. คำถามที่ 7?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q7"
-              value="a"
-              id="q7a" />
-            <label class="form-check-label" for="q7a">A) คำตอบ A</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q7"
-              value="b"
-              id="q7b" />
-            <label class="form-check-label" for="q7b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q7"
-              value="c"
-              id="q7c" />
-            <label class="form-check-label" for="q7c">C) คำตอบ C</label>
-          </div>
-        </div>
-
-        <!-- คำถามที่ 8 -->
-        <div class="mb-4 question">
-          <h5>8. คำถามที่ 8?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q8"
-              value="a"
-              id="q8a" />
-            <label class="form-check-label" for="q8a">A) คำตอบ A</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q8"
-              value="b"
-              id="q8b" />
-            <label class="form-check-label" for="q8b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q8"
-              value="c"
-              id="q8c" />
-            <label class="form-check-label" for="q8c">C) คำตอบ C</label>
-          </div>
-        </div>
-
-        <!-- คำถามที่ 9 -->
-        <div class="mb-4 question">
-          <h5>9. คำถามที่ 9?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q9"
-              value="a"
-              id="q9a" />
-            <label class="form-check-label" for="q9a">A) คำตอบ A</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q9"
-              value="b"
-              id="q9b" />
-            <label class="form-check-label" for="q9b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q9"
-              value="c"
-              id="q9c" />
-            <label class="form-check-label" for="q9c">C) คำตอบ C</label>
-          </div>
-        </div>
-
-        <!-- คำถามที่ 10 -->
-        <div class="mb-4 question">
-          <h5>10. คำถามที่ 10?</h5>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q10"
-              value="a"
-              id="q10a" />
-            <label class="form-check-label" for="q10a">A) คำตอบ A</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q10"
-              value="b"
-              id="q10b" />
-            <label class="form-check-label" for="q10b">B) คำตอบ B</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="q10"
-              value="c"
-              id="q10c" />
-            <label class="form-check-label" for="q10c">C) คำตอบ C</label>
-          </div>
-        </div>
-
+        <!-- คุณสามารถเพิ่มคำถามอื่น ๆ ได้ตามต้องการ -->
+      </form>
+      <div class="d-flex justify-content-center m-4">
         <button
           type="button"
           class="btn btn-primary"
           onclick="calculateScore()">
           ส่งคำตอบ
         </button>
-      </form>
-      <div id="result" class="mt-4"></div>
+        <div id="result" class="mt-4"></div>
+      </div>
     </div>
-    
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
-      <script src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
