--- a/game.html
+++ b/game.html
@@ -1,134 +1,126 @@
 <!DOCTYPE html>
 <html lang="th">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>แบบทดสอบภาษามือ</title>
+    <!-- ลิงค์ไปยังไฟล์ style.css -->
+    <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  </head>
-  <body>
+</head>
+<body>
     <div class="container mt-4">
-      <h2 class="text-center mb-4">แบบทดสอบภาษามือ</h2>
-      <form>
-        <!-- คำถามที่ 1 -->
-        <div class="mb-3">
-          <h5>1. สัญลักษณ์ภาษามือสำหรับคำว่า "สวัสดี" ทำอย่างไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q1" value="a" id="q1a" />
-            <label class="form-check-label" for="q1a">A) ยกมือแตะที่คางแล้วโบกมือเล็กน้อย</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q1" value="b" id="q1b" />
-            <label class="form-check-label" for="q1b">B) โบกมือจากซ้ายไปขวา</label>
-          </div>
-        </div>
+        <h2 class="text-center mb-4">แบบทดสอบภาษามือ</h2>
+        <form>
+            <!-- คำถามที่ 1 -->
+            <div class="mb-3">
+                <h5>1. สัญลักษณ์ภาษามือสำหรับคำว่า "สวัสดี" ทำอย่างไร?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q1" value="a" id="q1a" />
+                    <label class="form-check-label" for="q1a">A) ยกมือแตะที่คางแล้วโบกมือเล็กน้อย</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q1" value="b" id="q1b" />
+                    <label class="form-check-label" for="q1b">B) โบกมือจากซ้ายไปขวา</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 2 -->
-        <div class="mb-3">
-          <h5>2. ถ้าคุณต้องการบอกว่า "ขอบคุณ" ด้วยภาษามือ คุณจะทำท่าทางแบบไหน?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q2" value="a" id="q2a" />
-            <label class="form-check-label" for="q2a">A) แตะปลายนิ้วที่คางแล้วเหยียดไปข้างหน้า</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q2" value="b" id="q2b" />
-            <label class="form-check-label" for="q2b">B) วางมือบนหน้าอกแล้วโบกมือ</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 2 -->
+            <div class="mb-3">
+                <h5>2. ถ้าคุณต้องการบอกว่า "ขอบคุณ" ด้วยภาษามือ คุณจะทำท่าทางแบบไหน?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q2" value="a" id="q2a" />
+                    <label class="form-check-label" for="q2a">A) แตะปลายนิ้วที่คางแล้วเหยียดไปข้างหน้า</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q2" value="b" id="q2b" />
+                    <label class="form-check-label" for="q2b">B) วางมือบนหน้าอกแล้วโบกมือ</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 3 -->
-        <div class="mb-3">
-          <h5>3. การแสดงออกด้วยมือที่หมายถึงคำว่า "รัก" คืออะไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q3" value="a" id="q3a" />
-            <label class="form-check-label" for="q3a">A) ทำมือรูปหัวใจด้วยนิ้วทั้งสองข้าง</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q3" value="b" id="q3b" />
-            <label class="form-check-label" for="q3b">B) กอดแขนตัวเองเบา ๆ</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 3 -->
+            <div class="mb-3">
+                <h5>3. การแสดงออกด้วยมือที่หมายถึงคำว่า "รัก" คืออะไร?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q3" value="a" id="q3a" />
+                    <label class="form-check-label" for="q3a">A) ทำมือรูปหัวใจด้วยนิ้วทั้งสองข้าง</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q3" value="b" id="q3b" />
+                    <label class="form-check-label" for="q3b">B) กอดแขนตัวเองเบา ๆ</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 4 -->
-        <div class="mb-3">
-          <h5>4. เมื่อเราต้องการบอกว่า "เสียใจ" ด้วยภาษามือ เราควรใช้ท่าอะไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q4" value="a" id="q4a" />
-            <label class="form-check-label" for="q4a">A) ลูบมือบนหน้าอกเบา ๆ</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q4" value="b" id="q4b" />
-            <label class="form-check-label" for="q4b">B) ทำมือปาดน้ำตา</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 4 -->
+            <div class="mb-3">
+                <h5>4. เมื่อเราต้องการบอกว่า "เสียใจ" ด้วยภาษามือ เราควรใช้ท่าอะไร?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q4" value="a" id="q4a" />
+                    <label class="form-check-label" for="q4a">A) ลูบมือบนหน้าอกเบา ๆ</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q4" value="b" id="q4b" />
+                    <label class="form-check-label" for="q4b">B) ทำมือปาดน้ำตา</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 5 -->
-        <div class="mb-3">
-          <h5>5. ท่าทางภาษามือสำหรับคำว่า "ขอโทษ" คืออะไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q5" value="a" id="q5a" />
-            <label class="form-check-label" for="q5a">A) เอามือแตะหน้าอกแล้วลูบไปมา</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q5" value="b" id="q5b" />
-            <label class="form-check-label" for="q5b">B) พนมมือแล้วก้มศีรษะลงเล็กน้อย</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 5 -->
+            <div class="mb-3">
+                <h5>5. ท่าทางภาษามือสำหรับคำว่า "ขอโทษ" คืออะไร?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q5" value="a" id="q5a" />
+                    <label class="form-check-label" for="q5a">A) เอามือแตะหน้าอกแล้วลูบไปมา</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q5" value="b" id="q5b" />
+                    <label class="form-check-label" for="q5b">B) พนมมือแล้วก้มศีรษะลงเล็กน้อย</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 6 -->
-        <div class="mb-3">
-          <h5>6. ถ้าอยากบอกว่า "ชอบ" ด้วยภาษามือ เราต้องทำท่าอย่างไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q6" value="a" id="q6a" />
-            <label class="form-check-label" for="q6a">A) ใช้นิ้วหัวแม่มือชี้มาที่ตัวเองแล้วพยักหน้า</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q6" value="b" id="q6b" />
-            <label class="form-check-label" for="q6b">B) ยกนิ้วโป้งขึ้นแล้วพยักหน้า</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 6 -->
+            <div class="mb-3">
+                <h5>6. ถ้าอยากบอกว่า "ชอบ" ด้วยภาษามือ เราต้องทำท่าอย่างไร?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q6" value="a" id="q6a" />
+                    <label class="form-check-label" for="q6a">A) ใช้นิ้วหัวแม่มือชี้มาที่ตัวเองแล้วพยักหน้า</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q6" value="b" id="q6b" />
+                    <label class="form-check-label" for="q6b">B) ยกนิ้วโป้งขึ้นแล้วพยักหน้า</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 7 -->
-        <div class="mb-3">
-          <h5>7. วิธีการบอกว่า "หิว" ในภาษามือไทยคืออะไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q7" value="a" id="q7a" />
-            <label class="form-check-label" for="q7a">A) ลูบท้องเบา ๆ</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q7" value="b" id="q7b" />
-            <label class="form-check-label" for="q7b">B) เอามือแตะที่ปาก</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 7 -->
+            <div class="mb-3">
+                <h5>7. วิธีการบอกว่า "หิว" ในภาษามือไทยคืออะไร?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q7" value="a" id="q7a" />
+                    <label class="form-check-label" for="q7a">A) ลูบท้องเบา ๆ</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q7" value="b" id="q7b" />
+                    <label class="form-check-label" for="q7b">B) เอามือแตะที่ปาก</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 8 -->
-        <div class="mb-3">
-          <h5>8. เมื่อคุณไม่สบาย คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
-            <label class="form-check-label" for="q8a">A) เอามือแตะที่หน้าผาก</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
-            <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
-          </div>
-        </div>
+            <!-- คำถามที่ 8 -->
+            <div class="mb-3">
+                <h5>8. เมื่อคุณไม่สบาย คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
+                    <label class="form-check-label" for="q8a">A) เอามือแตะที่หน้าผาก</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
+                    <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
+                </div>
+            </div>
 
-        <!-- คำถามที่ 9 -->
-        <div class="mb-3">
-          <h5>9. สัญลักษณ์ภาษามือสำหรับคำว่า "โชคดี" ทำอย่างไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q9" value="a" id="q9a" />
-            <label class="form-check-label" for="q9a">A) ยกนิ้วชี้แล้วทำท่าเป็นวงกลม</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q9" value="b" id="q9b" />
-            <label class="form-check-label" for="q9b">B) โบกมือไปข้างหน้า</label>
-          </div>
-        </div>
+            <!-- ปุ่มส่งคำตอบ -->
+            <button type="submit" class="btn btn-primary">ส่งคำตอบ</button>
+        </form>
+    </div>
 
-        <!-- คำถามที่ 10 -->
-        <div class="mb-3">
-          <h5>10. ท่าทางสำหรับการบอกว่า "แล้วพบกันใหม่" ในภาษามือคืออะไร?</h5>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="q10" value="a" id="q10a" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
