--- a/game.html
+++ b/game.html
@@ -9,6 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+<nav class="navbar navbar-dark bg-primary sticky-top">
+      <div class="container">
+        <a class="navbar-brand mx-auto" href="/index.html"
+          >เรียนภาษามือเบื้องต้น</a
+        >
+      </div>
+</nav>
+    
     <div class="container mt-4">
         <h2 class="text-center mb-4">แบบทดสอบภาษามือ</h2>
         <form>
