--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q1" value="b" id="q1b" />
-                    <label class="form-check-label" for="q1b">B) โบกมือจากซ้ายไปขวา</label>
+                    <label class="form-check-label" for="q1b">Bใช้มือแตะที่หน้าผากแล้วเคลื่อนย้ายไปด้าน</label>
                 </div>
             </div>
 
@@ -117,6 +117,28 @@
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
                     <label class="form-check-label" for="q8a">A) เอามือแตะที่หน้าผาก</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
+                    <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <h5>9. โชคดี คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
+                    <label class="form-check-label" for="q8a">A) เอามือแตะที่หน้าผาก</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
+                    <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <h5>10. แล้วพบกันใหม่ คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
+                    <label class="form-check-label" for="q8a">A) ยกมือขวาปัดไปด้านหน้าทำนิ้วชี้ทั้งสองชนกันจากนั้นหั่นนิ้วชี้เข้าหาตัวเอง</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
