--- a/game.html
+++ b/game.html
@@ -150,7 +150,7 @@
             <button type="submit" class="btn btn-primary">ส่งคำตอบ</button>
         </form>
     </div>
-
+<script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
