--- a/game.html
+++ b/game.html
@@ -11,9 +11,7 @@
 <body>
 <nav class="navbar navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand mx-auto" href="/index.html"
-          >เรียนภาษามือเบื้องต้น</a
-        >
+        <a class="navbar-brand mx-auto" href="/index.html">เรียนภาษามือเบื้องต้น</a>
       </div>
 </nav>
     
@@ -22,135 +20,156 @@
         <form>
             <!-- คำถามที่ 1 -->
             <div class="mb-3">
-                <h5>1. สัญลักษณ์ภาษามือสำหรับคำว่า "สวัสดี" ทำอย่างไร?</h5>
+                <h5>1.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/1.jpg" alt="ภาพที่ 1">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q1" value="a" id="q1a" />
-                    <label class="form-check-label" for="q1a">A) ยกมือแตะที่คางแล้วโบกมือเล็กน้อย</label>
+                    <label class="form-check-label" for="q1a">A)สวัสดี</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q1" value="b" id="q1b" />
-                    <label class="form-check-label" for="q1b">Bใช้มือแตะที่หน้าผากแล้วเคลื่อนย้ายไปด้าน</label>
+                    <label class="form-check-label" for="q1b">B)ขอโทษ</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 2 -->
             <div class="mb-3">
-                <h5>2. ถ้าคุณต้องการบอกว่า "ขอบคุณ" ด้วยภาษามือ คุณจะทำท่าทางแบบไหน?</h5>
+                <h5>2.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/10.jpg" alt="ภาพที่ 2">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q2" value="a" id="q2a" />
-                    <label class="form-check-label" for="q2a">A) แตะปลายนิ้วที่คางแล้วเหยียดไปข้างหน้า</label>
+                    <label class="form-check-label" for="q2a">A)ขอบคุณ</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q2" value="b" id="q2b" />
-                    <label class="form-check-label" for="q2b">B) วางมือบนหน้าอกแล้วโบกมือ</label>
+                    <label class="form-check-label" for="q2b">B)แล้วแต่เธอ</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 3 -->
             <div class="mb-3">
-                <h5>3. การแสดงออกด้วยมือที่หมายถึงคำว่า "รัก" คืออะไร?</h5>
+                <h5>3.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/7.jpg" alt="ภาพที่ 3">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q3" value="a" id="q3a" />
-                    <label class="form-check-label" for="q3a">A) ทำมือรูปหัวใจด้วยนิ้วทั้งสองข้าง</label>
+                    <label class="form-check-label" for="q3a">A)รัก</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q3" value="b" id="q3b" />
-                    <label class="form-check-label" for="q3b">B) กอดแขนตัวเองเบา ๆ</label>
+                    <label class="form-check-label" for="q3b">B)อิ่มใจ</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 4 -->
             <div class="mb-3">
-                <h5>4. เมื่อเราต้องการบอกว่า "เสียใจ" ด้วยภาษามือ เราควรใช้ท่าอะไร?</h5>
+                <h5>4.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/3.jpg" alt="ภาพที่ 4">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q4" value="a" id="q4a" />
-                    <label class="form-check-label" for="q4a">A) ลูบมือบนหน้าอกเบา ๆ</label>
+                    <label class="form-check-label" for="q4a">A)เสียใจ</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q4" value="b" id="q4b" />
-                    <label class="form-check-label" for="q4b">B) ทำมือปาดน้ำตา</label>
+                    <label class="form-check-label" for="q4b">B)ช้ำใจ</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 5 -->
             <div class="mb-3">
-                <h5>5. ท่าทางภาษามือสำหรับคำว่า "ขอโทษ" คืออะไร?</h5>
+                <h5>5.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/2.jpg" alt="ภาพที่ 5">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q5" value="a" id="q5a" />
-                    <label class="form-check-label" for="q5a">A) เอามือแตะหน้าอกแล้วลูบไปมา</label>
+                    <label class="form-check-label" for="q5a">A)ขอโทษ</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q5" value="b" id="q5b" />
-                    <label class="form-check-label" for="q5b">B) พนมมือแล้วก้มศีรษะลงเล็กน้อย</label>
+                    <label class="form-check-label" for="q5b">B) หิวข้าว</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 6 -->
             <div class="mb-3">
-                <h5>6. ถ้าอยากบอกว่า "ชอบ" ด้วยภาษามือ เราต้องทำท่าอย่างไร?</h5>
+                <h5>6.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/4.jpg" alt="ภาพที่ 6">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q6" value="a" id="q6a" />
-                    <label class="form-check-label" for="q6a">A) ใช้นิ้วหัวแม่มือชี้มาที่ตัวเองแล้วพยักหน้า</label>
+                    <label class="form-check-label" for="q6a">A)ชอบ</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q6" value="b" id="q6b" />
-                    <label class="form-check-label" for="q6b">B) ยกนิ้วโป้งขึ้นแล้วพยักหน้า</label>
+                    <label class="form-check-label" for="q6b">B)เล็กนิดเดียว</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 7 -->
             <div class="mb-3">
-                <h5>7. วิธีการบอกว่า "หิว" ในภาษามือไทยคืออะไร?</h5>
+                <h5>7.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/5.jpg" alt="ภาพที่ 7">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q7" value="a" id="q7a" />
-                    <label class="form-check-label" for="q7a">A) ลูบท้องเบา ๆ</label>
+                    <label class="form-check-label" for="q7a">A)หิว</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q7" value="b" id="q7b" />
-                    <label class="form-check-label" for="q7b">B) เอามือแตะที่ปาก</label>
+                    <label class="form-check-label" for="q7b">B)ชอบ</label>
                 </div>
             </div>
 
             <!-- คำถามที่ 8 -->
             <div class="mb-3">
-                <h5>8. เมื่อคุณไม่สบาย คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
+                <h5>8.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+                <img src="/9.jpg" alt="ภาพที่ 8">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
-                    <label class="form-check-label" for="q8a">A) เอามือแตะที่หน้าผาก</label>
+                    <label class="form-check-label" for="q8a">A)ไม่สบาย</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
-                    <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
-                </div>
-            </div>
-            <div class="mb-3">
-                <h5>9. โชคดี คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
-                    <label class="form-check-label" for="q8a">A) เอามือแตะที่หน้าผาก</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
-                    <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
-                </div>
-            </div>
-            <div class="mb-3">
-                <h5>10. แล้วพบกันใหม่ คุณจะใช้ท่าทางแบบไหนในภาษามือ?</h5>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q8" value="a" id="q8a" />
-                    <label class="form-check-label" for="q8a">A) ยกมือขวาปัดไปด้านหน้าทำนิ้วชี้ทั้งสองชนกันจากนั้นหั่นนิ้วชี้เข้าหาตัวเอง</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="q8" value="b" id="q8b" />
-                    <label class="form-check-label" for="q8b">B) เอามือแตะที่คอแล้วทำท่าหายใจแรง</label>
+                    <label class="form-check-label" for="q8b">B)สวย</label>
                 </div>
             </div>
 
-            <!-- ปุ่มส่งคำตอบ -->
-            <button type="submit" class="btn btn-primary">ส่งคำตอบ</button>
-        </form>
-    </div>
-<script src="app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<div class="mb-3">
+        <h5>9.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+        <img src="/6.jpg" alt="">
+        <div class="form-check">
+                <input class="form-check-input" type="radio" name="q9" value="a" id="q9a" />
+                <label class="form-check-label" for="q9a">A) โชคดี</label>
+        </div>
+        <div class="form-check">
+                <input class="form-check-input" type="radio" name="q9" value="b" id="q9b" />
+                <label class="form-check-label" for="q9b">B) เจอกันใหม่</label>
+        </div>
+</div>
+
+<!-- คำถามที่ 10 -->
+<div class="mb-3">
+        <h5>10.สัญลักษณ์ในรูปภาพนี้สื่อถึงอะไร</h5>
+        <img src="/8.jpg" alt="">
+        <div class="form-check">
+                <input class="form-check-input" type="radio" name="q10" value="a" id="q10a" />
+                <label class="form-check-label" for="q10a">A) พบกันใหม่</label>
+        </div>
+        <div class="form-check">
+                <input class="form-check-input" type="radio" name="q10" value="b" id="q10b" />
+                <label class="form-check-label" for="q10b">B) ไม่สบาย</label>
+        </div>
+</div>
+
+<!-- ปุ่มส่งคำตอบ -->
+<div class="d-flex justify-content-center m-4">
+        <button type="button" class="btn btn-primary" onclick="calculateScore()">
+                ส่งคำตอบ
+        </button>
+</div>
+
+<!-- แสดงผลลัพธ์ -->
+<div id="result" class="mt-4"></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+      <script src="app.js"></script>
+  </body>
 </html>
