--- a/game.html
+++ b/game.html
@@ -159,7 +159,7 @@
 
 <!-- ปุ่มส่งคำตอบ -->
 <div class="d-flex justify-content-center m-4">
-        <button type="button" class="btn btn-primary" onclick="calculateScore()">
+        <button type="button" class="btn btn-danger" onclick="calculateScore()">
                 ส่งคำตอบ
         </button>
 </div>
